--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
 }
 
 dependencies {
-    val nav_version = "2.3.5"
-    val paging_version = "2.1.2"
+    def nav_version = "2.3.5"
+    def paging_version = "2.1.2"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -56,12 +56,13 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.35.1'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.35.1'
+    implementation("com.google.dagger:hilt-android:$hilt_version")
+    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0.'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -69,4 +70,7 @@ dependencies {
 
     // Paging
     implementation("androidx.paging:paging-runtime:$paging_version")
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
 }
